# keycloak-rocket-user-regisration

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  stack.yml
docker/: .gitignore  docker-compose.yaml
docker/kc/: Dockerfile  config.json
src/: keycloak.rs  lib.rs  main.rs  redis.rs  sms.rs
user-registration-app/: App.tsx  app.json  package.json
user-registration-app/android/: settings.gradle
user-registration-app/android/app/: BUCK  build.gradle
user-registration-app/android/app/src/main/: AndroidManifest.xml
user-registration-app/android/app/src/main/java/com/userregistrationapp/: MainActivity.java  MainApplication.java
user-registration-app/android/app/src/main/res/values/: strings.xml
user-registration-app/ios/: Podfile
user-registration-app/ios/userregistrationapp/: Info.plist
user-registration-app/ios/userregistrationapp.xcodeproj/: project.pbxproj
user-registration-app/ios/userregistrationapp.xcodeproj/xcshareddata/xcschemes/: userregistrationapp.xcscheme
user-registration-app/ios/userregistrationapp/Base.lproj/: LaunchScreen.xib
user-registration-app/src/reducers/: index.ts  register.reducer.ts
user-registration-app/src/redux/: axios-interceptor.ts  constants.ts  storage-utils.ts  store.ts
user-registration-app/src/screens/: cellnumber.screen.tsx  otp_entry.screen.tsx  otp_verify.screen.tsx  server.screen.tsx  shared.tsx  user_entry.screen.tsx  user_registration.screen.tsx  user_registration_done.screen.tsx
